# breads

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/: main.py
src/handlers/: file_date_time.py  ft_to_dt.py  help_cmd.py  help_table.py  ldap_connection.py  sid_translate.py  smb_connection.py
src/handlers/profile/: create_profile.py  get_data.py  helper.py  load_profile.py
src/helpers/: manager.py  sid_translate.py
src/modules/ldap/: aces.py  adcs.py  add_to_group.py  administrators.py  admins.py  change_password.py  computer.py  computers.py  containers.py  cpnl.py  disabled_accounts.py  domain_sid.py  domain_trusts.py  gmsa.py  gpos.py  group.py  groups.py  kerberoasting.py  ldapi.py  list_adcs.py  list_dcs.py  list_users.py  maq.py  maq_account_quota.py  no_pre_auth.py  obsolete.py  pass_not_req.py  pass_pol.py  search_computer.py  search_group.py  servers.py  sid.py  trusted_delegation.py  un_delegation.py  users.py  whoami.py
src/modules/privesc/: backup.py
src/modules/smb/: get_uac.py  kerberoasting.py  share.py
src/ui/: banner.py
